--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 
     "autoload": {
         "psr-0": {
-            "Inception": "bas-inception/src/"
+            "Inception": "src/"
         },
         "classmap": [
             "./"
